ld1 overall updates

--- a/child_pages/cc-elections/state_assembly_legislative_district_1.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_1.html
@@ -132,7 +132,7 @@
             <br>
             Meanwhile, we were able to meet up with Carolyn Rush and Brandon Saffold at a local meet n greet with Steven Fulop. They agreed to do a podcast style interview,
             which we have posted on their pages. We touched on many issues and you can get a good impression of their overall vision and personalities. We plan to do more 
-            correspondence with them as both the primary and general elections progress, as at least one of them will get through to the generals. However, after reaching 
+            correspondence with them as both the primary and general elections progress, as at least one of them will get through to the generals. Unfortunately, after reaching 
             out to Carol Sabo several different ways, we have yet to hear back from her.
             <br> 
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -192,6 +192,15 @@
         </div>
 
         <button class="quick-summary-reopen">quick election summary</button>
+
+        <br>
+
+        <a href="../cc-elections/lawrence_township_transparency_chart.html"
+                style="display: block; text-align: center; font-size: 1.5rem; margin: 2rem 0; font-weight: bold; color: #004080; text-decoration: none;">
+                Candidate Transparency/Accessibility Chart
+        </a>
+
+        <br>
 
         <div class="sb-top-box"> 
             <h3>PRIMARY ELECTION DATE: June 10th, 2025</h3>
