--- a/child_pages/cc-elections/state_assembly_legislative_district_3.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_3.html
@@ -189,7 +189,7 @@
             <h3>PRIMARY ELECTION DATE: June 10th, 2025</h3>
             <h2>SAMPLE BALLOT</h2>
             <p class="instructions">( Click or tap on candidate name to learn more about them )</p>
-            <h3>Governor</h3>
+            <h3>General Assembly</h3>
             <h4>DEMOCRATIC</h4>
             <h6>DEMOCRATA</h6>  
         </div>
