--- a/child_pages/cc-elections/Candidates/simmons.html
+++ b/child_pages/cc-elections/Candidates/simmons.html
@@ -148,6 +148,11 @@
                 — recognizing the public availability of her record but noting the lack of direct communication, future platform clarity, and summarization of prior work.
                 <br>
                 <br>
+                Note: While this is technically still the primary phase, both parties are running unopposed slates, meaning all four current candidates are expected to advance to the 
+                general election. This creates a valuable opportunity for candidates to begin clearly communicating their platforms early, giving voters more time to learn and engage. 
+                We encourage all candidates to take advantage of this head start by providing accessible, detailed information about their agendas and priorities.
+                <br>
+                <br>
                 For these reasons, Simmons receives a below average to average rating for transparency and accessibility.
                 <br>
                 <br>
