--- a/child_pages/cc-elections/state_assembly_legislative_district_3.html
+++ b/child_pages/cc-elections/state_assembly_legislative_district_3.html
@@ -128,6 +128,11 @@
             accepted from Chris Konawell, but we were left 'on read' (no response) when we asked for campaign information.
             <br>
             <br>
+            Note: While this is technically still the primary phase, both parties are running unopposed slates, meaning all four current candidates are expected to advance to the general 
+            election. This creates a valuable opportunity for candidates to begin clearly communicating their platforms early, giving voters more time to learn and engage. We encourage all 
+            candidates to take advantage of this head start by providing accessible, detailed information about their agendas and priorities.
+            <br>
+            <br>
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
 
           </p>
