--- a/child_pages/cc-elections/Candidates/bailey.html
+++ b/child_pages/cc-elections/Candidates/bailey.html
@@ -156,6 +156,14 @@
                 rely solely on past impressions or scattered official profiles to determine where he stands.
                 <br>
                 <br>
+                Note: While this is technically still the primary phase, both parties are running unopposed slates, meaning all four current candidates are expected to advance to the general 
+                election. This creates a valuable opportunity for candidates to begin clearly communicating their platforms early, giving voters more time to learn and engage. We encourage all 
+                candidates to take advantage of this head start by providing accessible, detailed information about their agendas and priorities.
+                <br>
+                <br>
+                For these reasons, Bailey receives a below average to average rating for transparency and accessibility.
+                <br>
+                <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
 
               </p>
