dem primary county commissioners update

--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -121,25 +121,21 @@
               <h6 class="page-title">John P. Capizola</h6>
               <p>          
 
-                John P. Capizola, Jr. is a former Cumberland County Commissioner, appointed in 2023 to serve a one-year term. He brings a background in education, with over two decades as a health 
-                and physical education teacher, a master’s in Educational Leadership, and certifications to serve as a principal and supervisor. He also has small business experience as a former 
-                restaurant and laundromat owner.
+                John Capizola, Jr., a former Cumberland County Commissioner and longtime educator, is once again seeking office—this time on a joint Democratic ticket with attorney Yolanda 
+                Garcia Balicki. The pair recently launched a Facebook page, emphasizing their goal to “restore a successful county government” through the lens of past Democratic leadership: 
+                low taxes, private-sector growth, and expanded educational programs.
                 <br>
                 <br>
-                In past campaigns and public forums, Capizola has expressed support for educational excellence, fiscal responsibility, environmental sustainability, and community 
-                revitalization—emphasizing infrastructure, recreation, senior services, and broadband access. He has also voiced support for armed security in schools and opposition to 
-                school vouchers. At the 2023 Candidates Forum, he spoke about wanting to attract former residents back to the county by boosting business opportunities and praised the shift 
-                from partisanship to collaboration during his short time on the board.
+                Capizola previously emphasized fiscal responsibility, infrastructure, and education as policy priorities. However, like his running mate, his current platform lacks detailed 
+                updates. Aside from general messaging, there are few specifics about where he stands today or how his views compare to Republican opponents.
                 <br>
                 <br>
-                However, <strong>his current campaign messaging remains unclear.</strong> Aside from a basic biographical profile, <strong>no updated policy stances, platform materials, or 
-                detailed comparisons to his opponent have been shared.</strong> While past statements offer a rough sketch of his views, they should not be assumed to reflect his current 
-                priorities.
+                Given that two commissioner seats are open and only three Democrats are competing, at least one—possibly both—of these candidates will likely move on to the general election. 
+                That dynamic raises the bar for transparency and preparedness, and voters deserve to see not only biographical qualifications, but also clear positions on county-specific 
+                challenges and how these candidates plan to address them in contrast with the incumbents.
                 <br>
                 <br>
-                Capizola has been contacted multiple times with opportunities to share updated information but has yet to provide a substantive response. Voters seeking detailed and current insights into his positions may find it difficult to evaluate his candidacy without greater transparency.
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
-
               </p>
             </div>
         </dialog>
@@ -218,6 +214,8 @@
              <div class="website">
                  
                 <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Party Site</button></a>                 
+                <a href="https://www.facebook.com/profile.php?id=61574930323850" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Campaign Facebook</button></a>
+
                 <a href="https://www.facebook.com/johnnycaps" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Personal Facebook</button></a>
                 <a href="https://www.instagram.com/jcapizola/?hl=en" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Instagram</button></a>
             
