--- a/child_pages/cc-elections/Candidates/smith.html
+++ b/child_pages/cc-elections/Candidates/smith.html
@@ -129,6 +129,11 @@
                 At this point, voters can only reference past interviews and public forums, which may not fully represent her current priorities or positions.
                 <br>
                 <br>
+                It’s also worth noting that although this is technically a primary race, two seats are open and only three Democrats are running—meaning there is a decent chance Smith will advance
+                to the general election. In that context, voters would reasonably expect the candidates to offer more robust platforms, direct comparisons to 
+                their likely opponents, and clear messaging on well-known county issues.
+                <br>
+                <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
 
               </p>
