--- a/child_pages/cc-elections/Candidates/albrecht.html
+++ b/child_pages/cc-elections/Candidates/albrecht.html
@@ -327,11 +327,7 @@
         </div>  
     </details>
             
-    <div class="video-box-modal can-sec">
-        <h3 class="video-heading">Sample WVLT Radio Show</h3>
-
-        <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2Fwvltradio%2Fvideos%2F2102555440250521%2F&show_text=false&width=560&t=0" width="560" height="314" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>    
-    </div>
+    <a href="https://www.facebook.com/share/v/19HSTAPM1v/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Sample Radio Show</button></a>                 
 
      <div class="candidate-agenda">
 
