vizzard interview summary table added

--- a/child_pages/cc-elections/Candidates/saffold.html
+++ b/child_pages/cc-elections/Candidates/saffold.html
@@ -246,7 +246,7 @@
 
     <br>
     <details>
-        <summary><strong>Click to view full interview summary (timestamps and topics)</strong></summary>
+        <summary><strong>Click to view full interview summary (timestamps, topics, and takeaways)</strong></summary>
         <div class="video-summary" style="margin-top: 1em;">
           <h2>Interview Summary – Brandon Saffold & Carolyn Rush</h2>
           <p>This table highlights the key topics covered in the 2.5-hour interview, summarizing major takeaways per section.</p>
