--- a/child_pages/cc-elections/Candidates/vizzard.html
+++ b/child_pages/cc-elections/Candidates/vizzard.html
@@ -222,6 +222,81 @@
         <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
     </div> 
 
+    <br>
+    <br>
+
+    <div class="video-box-modal can-sec">
+        <h3 class="video-heading">Recent QBC Interview With Vizzard</h3>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/zDuraz5lpvA?si=QjXV_1_9rznd-wfh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+
+    <br>
+
+    <details> 
+        <summary><strong>Click to view full interview summary (timestamps, topics, and takeaways)</strong></summary> 
+        <div class="video-summary" style="margin-top: 1em;"> <h2>Interview Summary – Warren Vizzard (Inside Track with Jim Quinn)</h2> 
+            <p>This table highlights the key topics covered in the interview, summarizing major takeaways per section.</p> 
+            <table border="1" cellpadding="8" cellspacing="0" style="width: 100%; border-collapse: collapse;"> 
+                <thead> 
+                    <tr> 
+                        <th style="text-align: left;">Timestamp</th> 
+                        <th style="text-align: left;">Topic</th> 
+                        <th style="text-align: left;">Key Takeaways</th> 
+                    </tr> 
+                </thead> 
+                <tbody> 
+                    <tr> 
+                        <td>2:18–4:00</td> 
+                        <td>Intro and NJ Motorsports Park</td> 
+                        <td>Discussion of NJ Motorsports Park ratables; long-term success after abatements. Mention of tax benefits and business development.</td> 
+                    </tr> 
+                    <tr> 
+                        <td>5:54–6:32</td> 
+                        <td>Veterans Memorial Park</td> 
+                        <td>Highlighted as one of Vizzard's proudest achievements; built with community volunteer support.</td> 
+                    </tr> <tr> <td>7:10–7:22</td> 
+                        <td>Walking Path Expansion</td> 
+                        <td>Wants to extend walking paths to Lake Audrey. Awaiting state approval.</td> 
+                    </tr> <tr> <td>14:50–16:00</td> <td>Marstown Park Restoration</td> 
+                        <td>Bulkhead damage causing park to sink; seeking $800K–$1M in funding, but grants have been hard to secure.</td> 
+                    </tr> 
+                    <tr> 
+                        <td>17:00–17:36</td> 
+                        <td>Bulk Waste Pickup</td> 
+                        <td>Monthly landfill access continues. Exploring additional drop-off points but wary of illegal dumping.</td> 
+                    </tr> <tr> <td>26:00–29:10</td> 
+                        <td>Forest Lakes Family Success Center</td> 
+                        <td>Inspira-funded resource hub in Laurel Lake offering food, GED support, and addiction help.</td> 
+                    </tr> <tr> <td>33:00–38:30</td> 
+                        <td>Road Repairs and Freight Grants</td> 
+                        <td>Since 2019, $9.7M in roadwork completed. Township only paid $160K. State freight grants played a major role.</td> 
+                    </tr> 
+                    <tr> 
+                        <td>38:30–40:52</td> 
+                        <td>Tier A Storm Drain Mandates</td> 
+                        <td>New state requirements for drainage upkeep raise township costs significantly.</td> 
+                    </tr> 
+                    <tr> 
+                        <td>53:30–55:30</td> 
+                        <td>BRIC Program Cancellation</td> 
+                        <td>FEMA pulled flood infrastructure funding. Township lost major opportunity to reduce floodplain and bring in more development.</td> 
+                    </tr> 
+                    <tr> 
+                        <td>58:00–59:00</td> 
+                        <td>Blighted Properties Clean-Up</td> 
+                        <td>Vizzard wants to clean up run-down properties, especially in Port Norris and Laurel Lake.</td> 
+                    </tr> 
+                    <tr> 
+                        <td>59:45–1:02:00</td> 
+                        <td>Reflections on Service</td> 
+                        <td>Entered politics to improve community and replace questionable leadership. Emphasizes learning curve of public service.</td> 
+                    </tr> 
+                </tbody> 
+            </table> 
+        </div> 
+    </details>
+
      <details>
         <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Events</summary>
 
