--- a/child_pages/resources-archives-and-rabbit-holes.html
+++ b/child_pages/resources-archives-and-rabbit-holes.html
@@ -124,11 +124,29 @@
                 <div class="get-involved-steps-content">
                     <ol class="gi-ol">
                         <li class="gl-li">
+                            <h3 class="video-heading">InformTheVoteNJ Archived Videos</h3>
+                            <br>
+                            <br>
+                            <a href="https://www.youtube.com/@InformTheVoteNJ">InformTheVoteNJ YouTube</a>
+                            <br>
+                            <br>
+                            <h3 class="video-heading">QBC Archived Videos</h3>
+                            <br>
+                            <br>
                             The Quinn Broadcasting Company is local to Cumberland County and has various interviews with candidates, elected officials, and other people relevant to 
                             local politics. We haven't watched and analyzed them yet, but if you've got the time, there is a good chance that you will become more familiar with local 
                             politics if you watch.
                             <br>
                             <br>
+
+                            <a href="https://www.instagram.com/qbc.tv/?igshid=MmIzYWVlNDQ5Yg%3D%3D">QBC Instagram</a>
+
+                            <br>
+                            <br>
+
+                            <a href="https://www.youtube.com/qbctv1">QBC YouTube</a>
+
+
                             <div class="video-box-modal">
                                 <h3 class="video-heading">Jim Quinn with Cumberland County Commissioner Douglas Albrecht</h3>
                             
