commercial township transparency updates

--- a/child_pages/cc-elections/Candidates/vizzard.html
+++ b/child_pages/cc-elections/Candidates/vizzard.html
@@ -205,7 +205,7 @@
         <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Very Low</h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
-        <img class="gauge" src="../../../assets/gauge_real_bad.svg" alt="">
+        <img class="gauge" src="../../../assets/gauge_kinda_bad.svg" alt="">
         <button id="rating-exp" class="rating-exp">anecdotal rating explanation</button>
     </div> 
 
@@ -327,9 +327,13 @@
             <div class="experience can-sec">
                 <ul>
                     <li><strong>Marshtown Park Restoration:</strong> Seeking $800k–$1M to repair erosion and restore public access.</li>
+                    <br>
                     <li><strong>Blighted Properties:</strong> Wants to use legal pathways to clean up abandoned and unsafe properties, especially in Port Norris and Laurel Lake.</li>
+                    <br>
                     <li><strong>Cost-Saving Services:</strong> Plans to acquire equipment to handle brush and leaf pickup in-house, saving on rising outsourcing costs.</li>
+                    <br>
                     <li><strong>Flood Mitigation:</strong> Disappointed by cancellation of FEMA’s BRIC program. Had worked on plans to protect riverfront areas and reduce the floodplain footprint to allow more building opportunities.</li>
+                    <br>
                     <li><strong>Expanded Trash/Bulk Pickup:</strong> Considering more bulk trash events with local drop-off dumpsters to serve residents more conveniently.</li>
                   </ul>
             </div>
@@ -338,9 +342,13 @@
             <div class="experience can-sec">
                 <ul>
                     <li><strong>Roadwork & Drainage:</strong> Overseen nearly $10 million in road improvements since 2019 with only $160k in township costs. Advocated for freight impact grants due to truck damage from local industry. Adjusting to costly new Tier A stormwater regulations.</li>
+                    <br>
                     <li><strong>Community Resources:</strong> Helped develop Veterans Memorial Park and a new walking path near the ballfields. Supports food pantries and the Forest Lakes Family Success Center which provides services like GED programs, parenting help, and addiction support.</li>
+                    <br>
                     <li><strong>Fiscal Transparency:</strong> Open about challenges related to municipal bonding, unfunded mandates, and balancing services without raising taxes.</li>
+                    <br>
                     <li><strong>Public Safety:</strong> Helped facilitate the construction of a new state police barracks in the township while maintaining township rental revenue.</li>
+                    <br>
                     <li><strong>Social Media Criticism:</strong> Stays off Facebook but acknowledges that online negativity can be misleading or uninformed. Values face-to-face understanding and constructive input.</li>
                   </ul>
             </div>
@@ -349,8 +357,11 @@
                 <div class="experience can-sec">
                     <ul>
                         <li><strong>Current Role:</strong> Deputy Mayor of Commercial Township, serving on the Township Committee for 9 years.</li>
+                        <br>
                         <li><strong>Professional Background:</strong> Owner of GM White Electrical Contracting since 2001. Started in the electrical trade as a teenager with Snell Electric in Vineland.</li>
+                        <br>
                         <li><strong>Local Ties:</strong> Lifelong resident with deep roots in the area. Attended Haleyville and Port Norris schools, and is closely connected to Laurel Lake, Port Norris, and other communities within the township.</li>
+                        <br>
                         <li><strong>Motivation for Office:</strong> Became involved after attending meetings and seeing what he believed was self-serving behavior. Ran for office to represent the people and improve the township.</li>
                       </ul>
                 </div>
