--- a/child_pages/cc-elections/commercial_township_committee.html
+++ b/child_pages/cc-elections/commercial_township_committee.html
@@ -117,11 +117,12 @@
           <h6 class="page-title">Commercial Township Committee</h6>
           <p>
             
-            One seat is open on the Commercial Township Committee. We have reached out to the candidates via the contact information they provided to the County Clerk 
-            (email and snail mail), though we have not received any responses yet. Apparently Robert Welch has received the endorsement from the Cumberland County 
-            Regular Republican organization, though after regularly attending bi-weekly republican breakfasts for almost 2 years, we have no idea who he is. Similarly, 
-            we have no idea who Warren Vizzard is, but with him not having the County Republican endorsement, we would assume he has a vested interest in making his case.
-            While approximately two months remain until the primary, we're not holding our breath waiting for responses.
+            One seat is open on the Commercial Township Committee. Mike Vizzard, the incumbent Deputy Mayor, has provided a detailed public interview outlining his background, 
+            nine years of experience, and ongoing projects—making him one of the candidates in the county with a solid track record and a decent level of accessibility, even if 
+            he's not exactly leading the charge in modern digital transparency. His primary challenger, Robert Welch, has reportedly received the endorsement of the Cumberland County 
+            Regular Republican Organization, but no public information about Welch’s background, platform, or campaign has surfaced so far. Despite our regular attendance at local 
+            political events and outreach through official candidate contact information, Welch remains a mystery. With the primary approaching, voters deserve more clarity—but as 
+            usual, we’re not holding our breath for a sudden outbreak of transparency.
             <br>
             <br>
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
