--- a/child_pages/cc-elections/commercial_township_transparency_chart.html
+++ b/child_pages/cc-elections/commercial_township_transparency_chart.html
@@ -178,8 +178,14 @@
     <div class="comparison-wrapper">
         <h2>Quick Transparency Breakdown</h2>
         <div class="summary-note">
-          As of now, neither candidate has provided a public campaign platform. The Republican Party’s endorsement of Welch raises additional questions about transparency 
-          in the nomination process in the sense that someone at least knows who Welch is, we just haven't seen or heard anything about him.
+          When it comes to transparency and voter accessibility, Mike Vizzard outpaces his challenger—though not by much. Vizzard has at least made one public appearance in a long-form 
+          interview that gives insight into his background, experience, and township initiatives. While it’s not election-specific messaging and lacks supporting digital infrastructure 
+          like a website, it’s still more than most candidates in low-profile races tend to offer.
+          <br>
+          <br>
+          Robert Welch, on the other hand, is virtually invisible to the public. Despite receiving the county party endorsement, there is no evidence of a campaign presence, platform, 
+          or engagement efforts. Right now, voters are choosing between someone we at least know a little about, and someone we can’t find any information on—even though he has the party’s 
+          backing.
           <br>
           <br>
           A brief review of our methods: We send snail mail and emails to the candidates via addresses they provided to the county clerk. We regularly attend political meetings and 
@@ -188,23 +194,23 @@
         </div>
       
         <div class="candidate-card">
-          <h3>Warren M. Vizzard</h3>
-          <span class="label">Public Platform:</span><span class="value">❌ None</span>
-          <span class="label">Response to Outreach:</span><span class="value">❌ No contact made</span>
-          <span class="label">Voter Info Participation:</span><span class="value">❌ No participation</span>
-          <span class="label">Public Appearances:</span><span class="value">❌ Unknown to voters</span>
-          <span class="label">Local Issue Messaging:</span><span class="value">❌ Not available</span>
-          <div class="rating">Rating: <strong>Low</strong></div>
+          <h3>Warren Vizzard</h3>
+          <span class="label">Public Platform:</span><span class="value">❌ No campaign website</span>
+          <span class="label">Response to Outreach:</span><span class="value">❌ No response to email or mail</span>
+          <span class="label">Voter Info Participation:</span><span class="value">✅ Featured in QBC interview</span>
+          <span class="label">Public Appearances:</span><span class="value">❌ None reported outside GOP breakfasts</span>
+          <span class="label">Local Issue Messaging:</span><span class="value">⚠️ Some issue detail in QBC interview only</span>
+          <div class="rating">Rating: <strong>Moderate</strong></div>
         </div>
       
         <div class="candidate-card">
           <h3>Robert Welch</h3>
-          <span class="label">Public Platform:</span><span class="value">❌ None</span>
-          <span class="label">Response to Outreach:</span><span class="value">❌ No response</span>
-          <span class="label">Voter Info Participation:</span><span class="value">❌ None</span>
-          <span class="label">Public Appearances:</span><span class="value">❌ Unknown, despite party endorsement</span>
-          <span class="label">Local Issue Messaging:</span><span class="value">❌ Not available</span>
-          <div class="rating">Rating: <strong>Low</strong></div>
+          <span class="label">Public Platform:</span><span class="value">❌ No campaign website</span>
+          <span class="label">Response to Outreach:</span><span class="value">❌ No response to email or mail</span>
+          <span class="label">Voter Info Participation:</span><span class="value">❌ No known public communication</span>
+          <span class="label">Public Appearances:</span><span class="value">❌ None reported outside GOP breakfasts</span>
+          <span class="label">Local Issue Messaging:</span><span class="value">❌ No messaging found</span>
+          <div class="rating">Rating: <strong>Very Low</strong></div>
         </div>
       </div>
 
