--- a/child_pages/cc-elections/Candidates/spiotto.html
+++ b/child_pages/cc-elections/Candidates/spiotto.html
@@ -115,11 +115,9 @@
               <h6 class="page-title">Trevor Spiotto</h6>
               <p>          
 
-                Trevor Spiotto is a candidate for Downe Township Committee, but no public information is available about his campaign, qualifications, or platform. He has no website, 
-                no public statements, and has not participated in any voter outreach or forums.
-                <br>
-                <br>
-                At this point, Spiotto is entirely unknown to the broader public, making it impossible for voters to evaluate his candidacy.
+                Trevor Spiotto is a candidate for Downe Township Committee and works as a Housing Inspector for the City of Millville. While his professional role offers a glimpse into 
+                his background, he has not provided any public information about his campaign, qualifications, or views. He has no website, no public statements, and no known 
+                participation in voter outreach or community forums, leaving voters with little to evaluate beyond his name on the ballot.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -135,18 +133,17 @@
               <h6 class="page-title">Trevor Spiotto</h6>
               <p>          
 
-                Trevor Spiotto is currently listed as a candidate for Downe Township Committee, but at this time, there is no public information available about his campaign, 
-                qualifications, or platform. He has no known website, no social media presence, no press coverage, and has not participated in any forums, public interviews, or 
-                voter outreach efforts.
+                Trevor Spiotto is currently a candidate for Downe Township Committee and is also employed as a Housing Inspector for the City of Millville. While this provides some 
+                insight into his professional background, there is still no publicly available information about his campaign, qualifications for office, or positions on local issues.
                 <br>
                 <br>
-                As of this writing, Spiotto is completely unknown to the public, and unless residents personally know him, there is no way for voters to evaluate his background or 
-                intentions for running. This absence of information is especially concerning in a local race, where candidates have a direct hand in shaping small-town governance and 
-                community services.
+                Spiotto has no known campaign website, no social media presence, and has not responded to public outreach or participated in any forums, interviews, or community 
+                meetings related to the election. Although a write-in vote under his name was recorded in the 2022 election, suggesting a previous interest in local office, he has yet 
+                to engage in any meaningful public outreach.
                 <br>
                 <br>
-                While other candidates in the Downe Township race have made efforts to share their vision or engage with voters, Spiotto has not taken any steps toward public 
-                transparency.
+                At this time, the lack of campaign transparency and voter communication makes it difficult for residents to understand his intentions or assess his potential as a 
+                township leader. In a race where other candidates are making visible efforts to engage the public, Spiotto remains largely absent from the conversation.
                 <br>
                 <br>
                 For these reasons, Trevor Spiotto currently receives the lowest possible rating for transparency and accessibility.
