--- a/child_pages/cc-elections/Candidates/vizzard.html
+++ b/child_pages/cc-elections/Candidates/vizzard.html
@@ -202,7 +202,7 @@
      </div>
 
      <div class="gauge-box">
-        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Very Low</h4>
+        <h4 class="sub-heading extra-long">Transparency/Accessibility Rating: Average</h4>
         <a href="../../../child_pages/cc-elections/transparency_standards_page.html" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Transparency Standards Explained</button></a>                 
 
         <img class="gauge" src="../../../assets/gauge_kinda_bad.svg" alt="">
