--- a/child_pages/cc-elections/downe_township_transparency_chart.html
+++ b/child_pages/cc-elections/downe_township_transparency_chart.html
@@ -178,8 +178,11 @@
     <div class="comparison-wrapper">
         <h2>Quick Transparency Breakdown</h2>
         <div class="summary-note">
-          Based on available information, Sean Pignatelli is the only candidate providing a clear, accessible campaign. Given that the Cumberland County Regular Republican Organization has 
-          endorsed two other candidates, we assume they have information about those candidates, we have just been unable to find anything. 
+          Based on currently available information, Sean Pignatelli remains the only candidate in the Downe Township race offering a clear, issue-driven public platform with direct 
+          voter engagement. However, some additional information has emerged about his opponents: Larry Jordan has an accessible professional background; 
+          Trevor Spiotto is known for community volunteering and his current role as a housing inspector in Millville; and Michael Rothman is the party-endorsed candidate. None of the 
+          three have published campaign platforms, made public appearances as candidates, or responded to direct outreach.
+
           <br>
           <br>
           A brief review of our methods: We send snail mail and emails to the candidates via addresses they provided to the county clerk. We regularly attend political meetings and 
@@ -202,7 +205,7 @@
           <span class="label">Public Platform:</span><span class="value">❌ None</span>
           <span class="label">Response to Outreach:</span><span class="value">❌ No response</span>
           <span class="label">Voter Info Participation:</span><span class="value">❌ None</span>
-          <span class="label">Public Appearances:</span><span class="value">❌ Unknown</span>
+          <span class="label">Public Appearances:</span><span class="value">⚠️ Known community volunteer, no campaign activity observed</span>
           <span class="label">Local Issue Messaging:</span><span class="value">❌ Unknown</span>
           <div class="rating">Rating: <strong>Low</strong></div>
         </div>
@@ -212,7 +215,7 @@
           <span class="label">Public Platform:</span><span class="value">❌ None</span>
           <span class="label">Response to Outreach:</span><span class="value">❌ No response</span>
           <span class="label">Voter Info Participation:</span><span class="value">❌ None</span>
-          <span class="label">Public Appearances:</span><span class="value">❌ Not observed</span>
+          <span class="label">Public Appearances:</span><span class="value">⚠️ Party-endorsed candidate, no public events observed</span>
           <span class="label">Local Issue Messaging:</span><span class="value">❌ Not available</span>
           <div class="rating">Rating: <strong>Low</strong></div>
         </div>
@@ -222,7 +225,7 @@
           <span class="label">Public Platform:</span><span class="value">❌ None</span>
           <span class="label">Response to Outreach:</span><span class="value">❌ No response</span>
           <span class="label">Voter Info Participation:</span><span class="value">❌ None</span>
-          <span class="label">Public Appearances:</span><span class="value">❌ Not observed</span>
+          <span class="label">Public Appearances:</span><span class="value">⚠️ Incumbent, but no campaign events observed</span>
           <span class="label">Local Issue Messaging:</span><span class="value">❌ Not available</span>
           <div class="rating">Rating: <strong>Low</strong></div>
         </div>
